# SaveTools

./: .gitignore  README.md
forza_saveswapper/: CMakeLists.txt  main.cpp
forza_saveswapper/application/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
forza_saveswapper/encryption/: EGameType.hpp  EKeyType.hpp  TContext.hpp
forza_saveswapper/encryption/streams/: CDecryptionStream.cpp  CDecryptionStream.hpp  CEncryptionStream.cpp  CEncryptionStream.hpp  CFh3Stream.cpp  CFh3Stream.hpp
forza_saveswapper/encryption/tfit/: CDecryption.cpp  CDecryption.hpp  CEncryption.cpp  CEncryption.hpp  CMac.cpp  CMac.hpp  CTFIT.cpp  CTFIT.hpp
forza_saveswapper/fileUtilities/: FileDialogs.cpp  FileDialogs.hpp  TFileOpenResult.hpp  TFileSaveResult.hpp
forza_saveswapper/swapper/: CBinaryStream.hpp  CCompileTimeHash.hpp  CHashBase.hpp  CRuntimeHash.hpp  TSizeInHeader.hpp
forza_saveswapper/swapper/structures/: CBinaryEntity.cpp  CBinaryEntity.hpp  CEntity.cpp  CEntity.hpp  CProfileEntity.cpp  CProfileEntity.hpp
